--- a/templates/Boiler_k.html
+++ b/templates/Boiler_k.html
@@ -12,7 +12,7 @@
 <section class="msger">
     <header class="msger-header">
         <div class="msger-header-title">
-            <i class="fa-solid fa-scale-balanced"></i> Chatbot <i class="fa-solid fa-scale-balanced"></i>
+            Chatbot
         </div>
     </header>
     <main class="msger-chat"></main>
@@ -21,6 +21,15 @@
         <button type="submit" class="msger-send-btn">Send</button>
     </form>
 </section>
+
+<!-- Grundlagen section on the  right-->
+<div class="grundlagen-section" id="grundlagenSection">
+    <h4>Grundlagen</h4>
+    <div class="grundlagen-content" id="grundlagenContent">
+        <!-- Content will be dynamically inserted here -->
+    </div>
+</div>
+
 <script src='https://use.fontawesome.com/releases/v5.0.13/js/all.js'></script>
 <script>
     const msgerForm = document.querySelector(".msger-inputarea");
@@ -40,35 +49,21 @@
         msgerInput.value = "";
 
         $.get("/get", { msg: msgText }).done(function (data) {
-            if(typeof data == "object"){
-                appendMessage(BOT_NAME, "left", data);
-            } else {
-                appendMessage(BOT_NAME, "left", data);
-            }
+            appendMessage(BOT_NAME, "left", data);
         }).fail(function () {
             appendMessage(BOT_NAME, "left", "Sorry, something went wrong. Please try again.");
         });
     });
 
-/*     function appendMessage(name, side, text) {
-        const msgHTML = `
-        <div class="msg ${side}-msg">
-            <div class="msg-bubble">
-                <div class="msg-info">
-                    <div class="msg-info-name">${name}</div>
-                    <div class="msg-info-time">${formatDate(new Date())}</div>
-                </div>
-                <div class="msg-text">${text}</div>
-            </div>
-        </div>`;
-        msgerChat.insertAdjacentHTML("beforeend", msgHTML);
-        msgerChat.scrollTop += 500;
-    } */ 
-
     function appendMessage(name, side, text) {
         let msgHTML;
 
-        if (typeof text === "object") {
+        if (typeof text === "object" && text !== null) {
+            // Update the Grundlagen section if present
+            if (text.grundlagen) {
+                document.getElementById('grundlagenContent').innerHTML = `<p>${text.grundlagen}</p>`;
+            }
+
             // Assuming the response is an object containing different fields like 'summary', 'sachverhalt', etc.
             msgHTML = `
             <div class="msg ${side}-msg">
